# sysmon-tray

./: .gitignore  .gitleaks.toml  .prettierignore  .prettierrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SPEC.md  eslint.config.js  index.html  lefthook.yml  package.json  pnpm-lock.yaml  renovate.json  tsconfig.json  vite.config.ts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: App.tsx
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  monitor.rs  notifier.rs
src/components/: Settings.test.tsx  Settings.tsx  StatusBar.test.tsx  StatusBar.tsx  TrayView.test.tsx  TrayView.tsx
src/hooks/: useSystemInfo.ts
src/test/: tauri-mock.ts
sysmon-mcp/: Cargo.toml  README.md
sysmon-mcp/src/: main.rs
