[package]
name = "system-monitor"
version = "0.1.0"
edition = "2021"

[lib]
name = "system_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
sysinfo = "0.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
