[package]
name = "sysmon-mcp"
version = "0.1.0"
edition = "2021"
description = "Privacy-first system metrics MCP server for AI coding assistants"
authors = ["ryotaro"]
license = "MIT"
repository = "https://github.com/ryo-kozin/sysmon-tray"
keywords = ["mcp", "system-monitor", "ai", "privacy"]
categories = ["command-line-utilities"]

[[bin]]
name = "sysmon-mcp"
path = "src/main.rs"

[dependencies]
sysinfo = "0.38"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
needless_pass_by_value = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
